ProjetCompil/Verif/Test/fail/affArrayType2.cas
program
	B : array [1 .. 18] OF real;
	C : integer;
begin
	C := B[3];
	
end.
	
